@@ -24,6 +24,7 @@
 #include <glib/gi18n.h>
 #include <gtk/gtkmain.h>
 #include <gtk/gtkwindow.h>
+#include <gtk/gtkaboutdialog.h>
 #include <stdio.h>
 #include <sys/stat.h>
 #include <gnet.h>
@@ -37,6 +38,7 @@
 #include "mud-window.h"
 #include "mud-profile.h"
 #include "modules.h"
+#include "utils.h"
 
 gboolean gconf_sanity_check_string (GConfClient *client, const gchar* key)
 {
@@ -132,7 +134,8 @@ int main (gint argc, char *argv[])
 	g_snprintf(buf, 500, "%s/.gnome-mud/logs/", g_get_home_dir());
 	if(!g_file_test(buf, G_FILE_TEST_IS_DIR))
 		mkdir(buf, 0777 );	
-	
+
+	gtk_about_dialog_set_url_hook(utils_activate_url, NULL, NULL);	
 	gtk_main();
 	gconf_client_suggest_sync(gconf_client, &err);
 
