@@ -21,7 +21,6 @@
 
 #include <stdio.h>
 #include <vte/vte.h>
-//#include <libgnetwork/gnetwork.h>
 
 #if TIME_WITH_SYS_TIME
 # include <sys/time.h>
