@@ -19,6 +19,8 @@
 #include <glib.h>
 #include <stdlib.h>
 #include <string.h>
+#include <gtk/gtkaboutdialog.h>
+#include <libgnomevfs/gnome-vfs.h>
 
 gchar *
 remove_whitespace(gchar *string)
@@ -68,3 +70,10 @@ strip_ansi(const gchar *orig)
   
   return buf;
 }
+
+void
+utils_activate_url(GtkAboutDialog *about, const gchar *url, gpointer data)
+{
+	gnome_vfs_url_show(url);
+}
+
